added a modified code